testfälle + findBugs